# logical-expression-parser

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  docs.md
src/: ast.rs  grammar.pest  lib.rs  main.rs  parser.rs  truth_table.rs
tests/: common.rs  expression_parser_tests.rs  file_parser_tests.rs  identifier_parser_tests.rs  operators_parser_tests.rs  parenthesis_parser_tests.rs
